--- a/home.html
+++ b/home.html
@@ -237,7 +237,7 @@
 
         const tempStatus = "{%tempStatus%}";
 
-        if (tempStatus == "Sunny" || tempStatus == "Clear") {
+        if (tempStatus == "Sunny" ) {
             weathercon.innerHTML = "<i class='fas fa-sun' style='color: #eccc68'></i>";
         } else if (tempStatus == "Clouds") {
             weathercon.innerHTML = "<i class='fas fa-cloud' style='color: blue'></i>";
