--- a/home.html
+++ b/home.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
         integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -111,10 +113,10 @@
         }
 
         .location {
-            margin-top: 1.5rem;
+            margin-top: -1.2rem;
             text-align: center;
             font-weight: 800;
-            font-size: 3rem;
+            font-size: 2.7rem;
             font-weight: 500;
         }
 
@@ -144,7 +146,7 @@
         .temp {
             margin-top: 2.5rem;
             text-align: center;
-            font-size: 5rem;
+            font-size: 2.5rem;
         }
 
         .tempmin_max {
@@ -156,7 +158,7 @@
         }
 
         #weathercon {
-            height: 55%;
+            height: 35%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -217,6 +219,14 @@
 
 <body>
     <div class="box">
+        <form class="row g-2">
+            <div class="col-9">
+                <input type="text" id="cityName1" class="form-control" placeholder="City Name" name="cityName1" required>
+            </div>
+            <div class="col-3">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
         <div class="wave one"></div>
         <div class="wave two"></div>
         <div class="wave three"></div>
@@ -224,11 +234,11 @@
             <i class="fas fa-sun" style="color: #eccc68"></i>
         </div>
         <div class="info">
-            <h2 class="location"> <i class="fas fa-street-view" style="color: white "></i> {%location%}, {%country%}
+            <h2 class="location"> <i class="fas fa-street-view" style="color: white "></i> {%location%} {%country%}
             </h2>
             <p id="date"> wed | oct 23 | 10:49 AM</p>
-            <h1 class="temp">{%tempVal%}°C</h1> <!-- alt + 0176 -->
-            <h3 class="tempmin_max">Min {%tempMin%}°C | Max {%tempMax%}°C</h3>
+            <h1 class="temp">{%tempVal%}</h1> <!-- alt + 0176 -->
+            <h3 class="tempmin_max">{%tempMin%} {%tempMax%}</h3>
         </div>
     </div>
     <script>
@@ -237,7 +247,7 @@
 
         const tempStatus = "{%tempStatus%}";
 
-        if (tempStatus == "Sunny" ) {
+        if (tempStatus == "Sunny") {
             weathercon.innerHTML = "<i class='fas fa-sun' style='color: #eccc68'></i>";
         } else if (tempStatus == "Clouds") {
             weathercon.innerHTML = "<i class='fas fa-cloud' style='color: blue'></i>";
